--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion '29.0.2'
     defaultConfig {
-        applicationId "com.zebra.barcodeintellgencetools"
+        applicationId "com.zebra.barcodeintelligencetools"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
